[package]
name = "loadconf"
description = "Library for loading configuration files quickly."
version = "0.2.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
repository = "https://github.com/xurtis/loadconf"
readme = "README.md"
keywords = ["config", "conf"]
categories = ["config"]
license = "ISC"

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3"

[badges]
travis-ci = { repository = "xurtis/loadconf", branch = "master" }
